connect contanct form to server/db

--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
 NODE_ENV = developement
- 
 PORT = 5000
-MONGO_URI = mongodb+srv://HacAtac-admin:cLZVXaqDA7nuAuoa@cluster0.6ttdd.mongodb.net/test
+MONGO_URI = mongodb+srv://HacAtac-admin:DPNC96prYCG2BxN5@cluster0.6ttdd.mongodb.net/portfolio?retryWrites=true&w=majority
