--- a/client/package.json
+++ b/client/package.json
@@ -3,13 +3,16 @@
   "name": "hac-portfolio",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@craco/craco": "^6.4.3",
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "antd": "^4.23.5",
     "autoprefixer": "^9.8.8",
+    "axios": "^1.1.2",
     "postcss": "^7.0.39",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -45,7 +48,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3",
-    "concurrently": "^5.1.0"
+    "concurrently": "^5.1.0",
+    "gh-pages": "^3.2.3"
   }
 }
