--- a/.github/workflows/main_hac-portfolio.yml
+++ b/.github/workflows/main_hac-portfolio.yml
@@ -19,25 +19,22 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v1
         with:
-          node-version: '16.x'
+          node-version: "16.x"
 
-      - name: npm install, build, and test
-        run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
-      
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Production'
+      name: "Production"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
@@ -46,11 +43,20 @@ jobs:
         with:
           name: node-app
 
-      - name: 'Deploy to Azure Web App'
+      - name: unzip artifact for deployment
+        run: unzip release.zip
+
+      - name: npm install, build, and test
+        run: |
+          npm run post-install
+          npm run build --if-present --prefix client
+          npm run test --if-present
+
+      - name: "Deploy to Azure Web App"
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
-          app-name: 'hac-portfolio'
-          slot-name: 'Production'
+          app-name: "hac-portfolio"
+          slot-name: "Production"
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_4569D82DA0794A588C591A443C5CE8BF }}
           package: .
